--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,7 @@ option(FLB_OUT_SLACK          "Enable Slack output plugin"          Yes)
 option(FLB_OUT_SPLUNK         "Enable Splunk output plugin"         Yes)
 option(FLB_OUT_STACKDRIVER    "Enable Stackdriver output plugin"    Yes)
 option(FLB_OUT_STDOUT         "Enable STDOUT output plugin"         Yes)
+option(FLB_OUT_REDIS          "Enable Redis output plugin"          Yes)
 option(FLB_OUT_LIB            "Enable library mode output plugin"   Yes)
 option(FLB_OUT_NULL           "Enable dev null output plugin"       Yes)
 option(FLB_OUT_FLOWCOUNTER    "Enable flowcount output plugin"      Yes)
