--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -189,6 +189,7 @@ REGISTER_OUT_PLUGIN("out_slack")
 REGISTER_OUT_PLUGIN("out_splunk")
 REGISTER_OUT_PLUGIN("out_stackdriver")
 REGISTER_OUT_PLUGIN("out_stdout")
+REGISTER_OUT_PLUGIN("out_redis")
 REGISTER_OUT_PLUGIN("out_tcp")
 REGISTER_OUT_PLUGIN("out_td")
 REGISTER_OUT_PLUGIN("out_lib")
