--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -188,6 +188,7 @@ if (NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
   REGISTER_OUT_PLUGIN("out_plot")
 endif()
 REGISTER_OUT_PLUGIN("out_pgsql")
+REGISTER_OUT_PLUGIN("out_redis")
 REGISTER_OUT_PLUGIN("out_retry")
 REGISTER_OUT_PLUGIN("out_slack")
 REGISTER_OUT_PLUGIN("out_splunk")
